--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -436,6 +436,12 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+
+  .template-reference {
+    color: $text-light;
+    background: rgba($color-brand, 0.12);
+    border-color: rgba($color-brand, 0.36);
+  }
 }
 
 .template-badges,
