--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -57,6 +57,7 @@
 }
 
 .navbar .nav-link.active {
+  color: $color-brand;
   font-weight: 700;
   text-decoration: underline;
   text-underline-offset: 6px;
